# CribSense

./: .gitignore  .travis.yml  LICENSE  LICENSE.md  Makefile.am  README.md  autogen.sh  config.ini  configure.ac  cribsense.service.in  index.html  mkdocs.yml  params.json  search.html  sitemap.xml
chassis/: CribSense.STL  case.makerbot  cover.makerbot  cover.stl
docs/: index.md
docs/setup/: config.md  hw-setup.md  setup.md  sw-setup.md  troubleshooting.md
mkdocs/: search_index.json
setup/config/: index.html
setup/hw-setup/: index.html
setup/setup/: index.html
setup/sw-setup/: index.html
setup/troubleshooting/: index.html
src/: Butterworth.cpp  Butterworth.hpp  CommandLine.cpp  CommandLine.hpp  ComplexMat.hpp  DisplayWidget.hpp  INIReader.cpp  INIReader.h  Magnifier.pro  MainDialog.cpp  MainDialog.hpp  MotionDetection.cpp  MotionDetection.hpp  RieszTransform.cpp  RieszTransform.hpp  VideoSource.cpp  VideoSource.hpp  WorkerThread.hpp  ini.c  ini.h  main.cpp
